refactor(rocksdb): simplify CLI to single --storage.rocksdb flag
Replace 3 separate RocksDB CLI flags with a single unified flag that
enables RocksDB for all supported history tables.

- Remove `RocksDBArgs` struct and its separate flags:
  - `--rocksdb.account-history`
  - `--rocksdb.storages-history`
  - `--rocksdb.tx-hash-numbers`
- Add single `--storage.rocksdb` flag to `StaticFilesArgs`
- When enabled, all 3 tables use RocksDB (AccountsHistory,
  StoragesHistory, TransactionHashNumbers)
- Add `reth db settings set` subcommands for individual table control
- Update e2e test script and documentation

--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -1019,6 +1019,13 @@ Static Files:
 
           Note: This setting can only be configured at genesis initialization. Once the node has been initialized, changing this flag requires re-syncing from scratch.
 
+      --storage.rocksdb
+          Use RocksDB for history indices instead of MDBX.
+
+          When enabled, AccountsHistory, StoragesHistory, and TransactionHashNumbers tables will be stored in RocksDB for better write performance.
+
+          Note: This setting can only be configured at genesis initialization. Once the node has been initialized, changing this flag requires re-syncing from scratch.
+
 Ress:
       --ress.enable
           Enable support for `ress` subprotocol
