--- a/docs/vocs/docs/pages/cli/reth/re-execute.mdx
+++ b/docs/vocs/docs/pages/cli/reth/re-execute.mdx
@@ -138,9 +138,7 @@ Static Files:
           The height to end at. Defaults to the latest block
 
       --num-tasks <NUM_TASKS>
-          Number of tasks to run in parallel
-
-          [default: 10]
+          Number of tasks to run in parallel. Defaults to the number of available CPUs
 
       --skip-invalid-blocks
           Continues with execution when an invalid block is encountered and collects these blocks
