--- a/docs/vocs/docs/pages/cli/op-reth/db/settings/set.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db/settings/set.mdx
@@ -9,10 +9,13 @@ $ op-reth db settings set --help
 Usage: op-reth db settings set [OPTIONS] <COMMAND>
 
 Commands:
-  receipts             Store receipts in static files instead of the database
-  transaction_senders  Store transaction senders in static files instead of the database
-  account_changesets   Store account changesets in static files instead of the database
-  help                 Print this message or the help of the given subcommand(s)
+  receipts                  Store receipts in static files instead of the database
+  transaction_senders       Store transaction senders in static files instead of the database
+  account_changesets        Store account changesets in static files instead of the database
+  storages_history          Store storage history in rocksdb instead of MDBX
+  transaction_hash_numbers  Store transaction hash to number mapping in rocksdb instead of MDBX
+  account_history           Store account history in rocksdb instead of MDBX
+  help                      Print this message or the help of the given subcommand(s)
 
 Options:
   -h, --help
