--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -899,23 +899,17 @@ Pruning:
 
 RocksDB:
       --rocksdb.tx-hash <TX_HASH>
-          Route tx hash -> number table to `RocksDB` instead of MDBX.
-
-          Note: genesis-initialization-only, changing later requires re-sync.
+          Route tx hash -> number table to `RocksDB` instead of MDBX
 
           [possible values: true, false]
 
       --rocksdb.storages-history <STORAGES_HISTORY>
-          Route storages history tables to `RocksDB` instead of MDBX.
-
-          Note: genesis-initialization-only, changing later requires re-sync.
+          Route storages history tables to `RocksDB` instead of MDBX
 
           [possible values: true, false]
 
       --rocksdb.account-history <ACCOUNT_HISTORY>
-          Route account history tables to `RocksDB` instead of MDBX.
-
-          Note: genesis-initialization-only, changing later requires re-sync.
+          Route account history tables to `RocksDB` instead of MDBX
 
           [possible values: true, false]
 
