--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -1039,6 +1039,11 @@ Engine:
 
           [default: 1s]
 
+      --engine.small-block-tx-threshold <SMALL_BLOCK_TX_THRESHOLD>
+          Transaction count threshold below which blocks skip the StateRootTask in favor of parallel state root computation. The sparse trie task has fixed coordination overhead (~5-6ms) that exceeds the benefit for small blocks. Set to 0 to disable
+
+          [default: 30]
+
 ERA:
       --era.enable
           Enable import from ERA1 files
