Apply suggestion from @emmajam

--- a/docs/vocs/docs/pages/overview.mdx
+++ b/docs/vocs/docs/pages/overview.mdx
@@ -20,6 +20,8 @@ As a full Ethereum node, Reth allows users to connect to the Ethereum network an
 
 ## Goals
 
+Building a successful Ethereum node requires creating a high-quality implementation that is both secure and efficient, as well as being easy to use on consumer hardware. It also requires building a strong community of contributors who can help support and improve the software.
+
 ### Modularity
 
 Every component of Reth is built to be used as a library: well-tested, heavily documented and benchmarked. We envision that developers will import the node's crates, mix and match, and innovate on top of them.
